# rat-salsa

./: .gitignore  Cargo.toml  changes.md  crate.md  ftable.webm  publish.cmd  readme.md  scrolling.md  todo.md  versions.txt
explore/: Cargo.toml
explore/src/: main.rs  toolbar.rs
pal-edit/: Cargo.toml  changes.md  doc.md  readme.md
pal-edit/src/: base46.rs  clipboard.rs  color_span.rs  configparser_ext.rs  datainput.rs  foreign.rs  main.rs  other.rs  palette_edit.rs  proc.rs  readability.rs  sample_custom.rs  sample_data_input.rs  sample_dialog.rs  sample_or_base46.rs  sample_other.rs  sample_readability.rs  sample_split.rs  sample_table.rs  show_or_base46.rs  show_sample.rs  show_tabs.rs
rat-cursor/: Cargo.toml  changes.md  readme.md
rat-cursor/src/: lib.rs
rat-dialog/: Cargo.toml  changes.md  readme.md
rat-dialog/examples/: file_dialog.rs  turbo.rs  turbo2.rs  turbo3.rs  window.rs
rat-dialog/src/: dialog_control.rs  dialog_stack.rs  lib.rs  window.rs  window_control.rs  window_list.rs
rat-event/: Cargo.toml  changes.md  readme.md
rat-event/src/: crossterm.rs  lib.rs  util.rs
rat-event/tests/: test_util.rs
rat-focus/: Cargo.toml  changes.md  doc.md  readme.md
rat-focus/examples/: focus_input1.rs  focus_recursive.rs  focus_recursive2.rs
rat-focus/src/: builder.rs  core.rs  flag.rs  focus.rs  lib.rs
rat-ftable/: Cargo.toml  changes.md  readme.md
rat-ftable/examples/: table_0_height.rs  table_cell_selection.rs  table_empty.rs  table_insane_offset.rs  table_iter.rs  table_iter_endless.rs  table_iter_ref.rs  table_layoutwidth.rs  table_row_selection.rs  table_rowrange_selection.rs  table_slice.rs  table_text.rs
rat-ftable/src/: cellselection.rs  edit.rs  lib.rs  noselection.rs  rowselection.rs  rowsetselection.rs  table.rs  textdata.rs  util.rs
rat-markdown/: Cargo.toml  changes.md  readme.md
rat-markdown/src/: dump.rs  format.rs  lib.rs  operations.rs  parser.rs  styles.rs  util.rs
rat-menu/: Cargo.toml  changes.md  readme.md
rat-menu/src/: lib.rs  menubar.rs  menuitem.rs  menuline.rs  popup_menu.rs  util.rs
rat-popup/: Cargo.toml  changes.md  readme.md
rat-popup/examples/: popup1.rs
rat-popup/src/: lib.rs  popup.rs
rat-reloc/: Cargo.toml  changes.md  readme.md
rat-reloc/src/: lib.rs
rat-salsa/: Cargo.toml  changes.md  readme.md
rat-salsa/examples/: async1.rs  cheat.md  composite.rs  files.rs  half_ui.rs  inline.rs  inline_text_prompt.rs  life.rs  links.rs  logscroll.rs  mdedit.md  mdedit.rs  minimal.rs  nominal.rs  palette_edit.rs  palette_edit2.rs  palette_edit5.rs  textinput.rs  theme_sample.rs  themes.rs  todo.rs  turbo.rs  ultra.rs  uni_blocks_term.rs
rat-salsa/rsbook/: book.toml
rat-salsa/src/: control.rs  control_queue.rs  dialog_stack.rs  event.rs  framework.rs  lib.rs  mock.rs  poll.rs  poll_events.rs  run_config.rs  timer.rs  widgets.rs
rat-salsa/templates/: dialog.rs  minimal.rs  nominal.rs
rat-salsa2/: Cargo.toml  changes.md  readme.md
rat-salsa2/examples/: async1.rs  files.rs  inline.rs  life.rs  logscroll.rs  minimal.rs  nominal.rs  theme_sample.rs  turbo.rs  ultra.rs
rat-salsa2/rsbook/: book.toml
rat-salsa2/src/: framework.rs  lib.rs  poll_events.rs  rendered.rs  run_config.rs  tasks.rs
rat-scrolled/: .gitignore  Cargo.toml  changes.md  readme.md
rat-scrolled/examples/: slist.rs  sparagraph.rs  stable.rs
rat-scrolled/src/: block_style.rs  lib.rs  scroll.rs  scroll_area.rs
rat-scrolled/tests/: test_scroll_to_range.rs  test_serde.rs
rat-text/: Cargo.toml  changes.md  readme.md
rat-text/examples/: textarea1.rs  textarea2.rs  textinput1.rs  textinput2.rs  textmask1.rs
rat-text/src/: cache.rs  clipboard.rs  color_input.rs  cursor.rs  date_input.rs  derive.rs  glyph.rs  glyph2.rs  grapheme.rs  lib.rs  line_number.rs  number_input.rs  range_map.rs  text_area.rs  text_core.rs  text_input.rs  text_input_mask.rs  text_mask_core.rs  text_store.rs  undo_buffer.rs
rat-text/tests/: test_core.rs  test_masked.rs  test_textrope.rs  test_textstring.rs
rat-theme/: Cargo.toml  changes.md  readme.md
rat-theme/src/: base16.rs  dark_theme.rs  imperial.rs  lib.rs  monochrome.rs  ocean.rs  oxocarbon.rs  radium.rs  vscode_dark.rs
rat-theme2/: Cargo.toml  changes.md  readme.md
rat-theme2/src/: base16.rs  base16r.rs  blackwhite.rs  dark_theme.rs  imperial.rs  lib.rs  monekai.rs  monochrome.rs  ocean.rs  oxocarbon.rs  palette.rs  radium.rs  scheme.rs  shell_theme.rs  tundra.rs  vscode_dark.rs
rat-theme3/: Cargo.toml  changes.md  readme.md
rat-theme3/src/: dark_theme.rs  lib.rs  palette.rs  shell_theme.rs
rat-theme3/tests/: test_serde.rs
rat-theme4/: Cargo.toml  changes.md  readme.md
rat-theme4/dark_palettes/: base16.pal  black_white.pal  blackout.pal  embark.pal  everforest.pal  falcon_dark.pal  gatekeeper.pal  imperial.pal  material.pal  monekai.pal  monochrome.pal  nord.pal  ocean.pal  oxocarbon.pal  radium.pal  reds.pal  rust.pal  shell.pal  solarized.pal  tailwind.pal  tundra.pal  vscode.pal
rat-theme4/light_palettes/: blossom_light.pal  embark_light.pal  everforest.pal  everforest_light.pal  gatekeeper_light.pal  imperial.pal  imperial_light.pal  obsidian_ember_light.pal  rust.pal  rust_light.pal  sunrisebreeze.pal  sunrisebreeze_light.pal  tailwind.pal  tailwind.rs  tailwind_light.pal
rat-theme4/other_palettes/: blackout.pal  shell.pal
rat-theme4/pal/: base16 relax.pal  base16.pal  black&white.pal  blackout.pal  everforest.pal  monekai.pal  ocean.pal  oxocarbon.pal  reds.pal  rust.pal  shell.pal  sickyellow.pal  solarized.pal  tundra.pal  vscodedark.pal
rat-theme4/shell_palettes/: base16_shell.pal  black_white_shell.pal  embark_shell.pal  everforest_shell.pal  gatekeeper_shell.pal  imperial_shell.pal  material_shell.pal  monekai_shell.pal  monochrome_shell.pal  nord_shell.pal  ocean_shell.pal  oxocarbon_shell.pal  radium_shell.pal  reds_shell.pal  rust_shell.pal  solarized_shell.pal  tailwind_shell.pal  tundra_shell.pal  vscode_shell.pal
rat-vim/: Cargo.toml  readme.md
rat-widget/: Cargo.toml  changes.md  readme.md
rat-widget-extra/: Cargo.toml  changes.md  readme.md
(+1177 files in other folders)
