[workspace]
resolver = "2"
members = [
  "rat-cursor",
  "rat-dialog",
  "rat-event",
  "rat-focus",
  "rat-ftable",
  "rat-markdown",
  "rat-menu",
  "rat-popup",
  "rat-reloc",
  "rat-salsa",
  "rat-scrolled",
  "rat-text",
  "rat-theme4",
  "rat-widget",
  "rat-widget-extra",
]

[workspace.dependencies]
rat-cursor = { path = "rat-cursor", version = "2.0.0" }
rat-dialog = { path = "rat-dialog", version = "2.0.1" }
rat-event = { path = "rat-event", version = "2.0.4" }
rat-focus = { path = "rat-focus", version = "2.0.2" }
rat-ftable = { path = "rat-ftable", version = "2.1.0" }
rat-markdown = { path = "rat-markdown", version = "0.7.2" }
rat-menu = { path = "rat-menu", version = "3.0.1" }
rat-popup = { path = "rat-popup", version = "3.0.1" }
rat-reloc = { path = "rat-reloc", version = "2.0.2" }
rat-salsa = { path = "rat-salsa", version = "4.0.2" }
rat-scrolled = { path = "rat-scrolled", version = "2.0.1" }
rat-text = { path = "rat-text", version = "3.0.3" }
rat-theme4 = { path = "rat-theme4", version = "4.5.2" }
rat-widget = { path = "rat-widget", version = "3.1.1" }
rat-widget-extra = { path = "rat-widget-extra", version = "2.0.1" }

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
if_same_then_else = "allow"
comparison_chain = "allow"
