[package]
name = "explore"
version = "0.1.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "ratatui", "input", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
log = "0.4"
fern = "0.7"
anyhow = "1.0"

rat-widget = { version = "2.11", path = "../rat-widget" }
rat-theme4 = { version = "4.4", default-features = false, features = ["rat-widget"], path = "../rat-theme4" }

