[package]
name = "pal-edit"
version = "1.6.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "edit and preview for rat-theme4 color palettes."
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa/pal-edit"
readme = "readme.md"
keywords = ["ratatui", "themes", "color"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
cli-clipboard = "0.4"
dirs = "6.0"
fern = "0.7"
indexmap = "2.12"
log = "0.4"
pure-rust-locales = "0.8"
sys-locale = "0.3"
try_as_traits = { version = "0.1" }

configparser = { version = "3.1", features = ["indexmap"] }

crossterm = "0.28"
ratatui = { version = "0.29", features = [] }
serde_json = "1.0"

rat-salsa = { version = "3.0", path = "../rat-salsa", features = ["dialog_widgets"] }
rat-widget = { version = "2.10", path = "../rat-widget", features = ["user_directories"] }
rat-widget-extra = { version = "1.0", path = "../rat-widget-extra", features = ["color-input"] }
rat-theme4 = { version = "4.3", path = "../rat-theme4", features = ["serde", "color-input"] }



