[package]
name = "pal-edit"
version = "2.0.2"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "edit and preview for rat-theme4 color palettes."
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa/pal-edit"
readme = "readme.md"
keywords = ["ratatui", "themes", "color"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
default = ["term"]
#wgpu = []
wgpu = ["dep:rat-salsa-wgpu"]
term = ["dep:rat-salsa"]

[dependencies]
anyhow = "1.0"
cli-clipboard = "0.4"
dirs = "6.0"
fern = "0.7"
indexmap = "2.12"
log = "0.4"
pure-rust-locales = "0.8"
sys-locale = "0.3"
try_as_traits = { version = "0.1" }
configparser = { version = "3.1", features = ["indexmap"] }
serde_json = "1.0"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-salsa = { version = "4.0", features = ["dialog_widgets"], optional = true }
rat-salsa-wgpu = { version = "0.10", git = "https://github.com/thscharler/rat-salsa-wgpu", features = ["fallback_symbol_font", "fallback_emoji_font"], optional = true }
rat-widget = { version = "3.0", features = ["user_directories"] }
rat-widget-extra = { version = "2.0", features = ["color-input"] }
rat-theme4 = { version = "4", features = ["serde", "color-input"] }

[[bin]]
name = "paledit-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "paledit"
path = "src/main.rs"
required-features = ["term"]

