[package]
name = "rat-cursor"
version = "1.2.1"
edition = "2024"
description = "ratatui trait to communicate the cursor position across widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "input", "cursor"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
