[package]
name = "rat-dialog"
version = "0.7.2"
authors = ["thscharler <thscharler@gmail.com>"]
edition = "2024"
description = "stacked dialog windows and application windows"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "dialog", "window"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[features]
default = []

[dependencies]
crossterm = "0.28"
log = "0.4"
try_as = "0.1.0"
ratatui = { version = "0.29" }
rat-event = { version = "1.2", path = "../rat-event" }
rat-focus = { version = "1.5", path = "../rat-focus" }
rat-widget = { version = "2.4", path = "../rat-widget" }

[dev-dependencies]
anyhow = "1.0"
fern = "0.7"
dirs = "6.0"
rat-salsa = { version = "2.1", path = "../rat-salsa" }
rat-theme4 = { version = "4.0", path = "../rat-theme4" }

