[package]
name = "rat-dialog"
version = "2.0.1"
authors = ["thscharler <thscharler@gmail.com>"]
edition = "2024"
description = "stacked dialog windows and application windows"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "dialog", "window"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
default = []

[dependencies]
log = "0.4"
try_as = "0.1.0"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { version = "2.0", path = "../rat-event" }
rat-focus = { version = "2.0", path = "../rat-focus" }
rat-widget = { version = "3.0", path = "../rat-widget" }

[dev-dependencies]
anyhow = "1.0"
fern = "0.7"
dirs = "6.0"
rat-salsa = { version = "4.0", path = "../rat-salsa" }
rat-theme4 = { version = "4", path = "../rat-theme4" }

