[package]
name = "rat-event"
version = "1.3.0"
edition = "2024"
description = "ratatui event handler trait for widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "input", "event"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
crossterm = "0.28"
ratatui = { version = "0.29" }
log = "0.4"