[package]
name = "rat-focus"
version = "1.3.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "focus handling for ratatui widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "focus"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
ratatui = { version = "0.29" }
crossterm = "0.28"
log = "0.4"
fxhash = "0.2"

rat-event = { version = "1.2", path = "../rat-event" }
rat-reloc = { version = "1.2", path = "../rat-reloc" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
unicode-segmentation = "1.11"