[package]
name = "rat-ftable"
version = "1.4.0"
edition = "2024"
description = "ratatui table widget for large data"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "table", "large"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "ftable.gif"]

[lints.clippy]
collapsible_else_if = "allow"

[features]
# Show some runtime warnings.
# Table can detect some acceptable but maybe not optimal paramters.
perf_warnings = []

[dependencies]
crossterm = "0.28"
ratatui = { version = "0.29" }
log = "0.4"

rat-event = { version = "1.4", path = "../rat-event" }
rat-reloc = { version = "1.4", path = "../rat-reloc" }
rat-cursor = { version = "1.2", path = "../rat-cursor" }
rat-focus = { version = "1.5", path = "../rat-focus" }
rat-scrolled = { version = "1.4", path = "../rat-scrolled" }

[dev-dependencies]
fern = "0.7"
rand = "0.8.5"
anyhow = "1.0"
format_num_pattern = "0.9.2"
unicode-segmentation = "1.11"
