[package]
name = "rat-ftable"
version = "2.1.0"
edition = "2024"
description = "ratatui table widget for large data"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "table", "large"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "ftable.gif"]

[lints]
workspace = true

[features]
# Show some runtime warnings.
# Table can detect some acceptable but maybe not optimal paramters.
perf_warnings = []

[dependencies]
log = "0.4"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-reloc = { workspace = true }
rat-cursor = { workspace = true }
rat-focus = { workspace = true }
rat-scrolled = { workspace = true }

[dev-dependencies]
fern = "0.7"
rand = "0.9"
anyhow = "1.0"
format_num_pattern = "0.9"
unicode-segmentation = "1.11"

rat-theme4 = { workspace = true }
