[package]
name = "rat-markdown"
version = "0.6.3"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "markdown support for rat-text"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "text", "markdown"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
log = "0.4"
ratatui = { version = "0.29" }
crossterm = "0.28"
pulldown-cmark = "0.12"
textwrap = "0.16"
unicode-segmentation = "1.11"

rat-event = { version = "1.4", path = "../rat-event" }
rat-focus = { version = "1.6", path = "../rat-focus" }
rat-text = { version = "2.7", path = "../rat-text" }
