[package]
name = "rat-markdown"
version = "0.7.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "markdown support for rat-text"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "text", "markdown"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
log = "0.4"
pulldown-cmark = "0.12"
textwrap = "0.16"
unicode-segmentation = "1.11"

ratatui-core = { version = "0.1.0-beta.0", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3.0-beta.0", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1.0-beta.0" }

rat-event = { version = "2.0", path = "../rat-event" }
rat-focus = { version = "2.0", path = "../rat-focus" }
rat-text = { version = "3.0", path = "../rat-text" }
