[package]
name = "rat-markdown"
version = "0.7.2"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "markdown support for rat-text"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "text", "markdown"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
log = "0.4"
pulldown-cmark = "0.13"
textwrap = "0.16"
unicode-segmentation = "1.11"

ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-focus = { workspace = true }
rat-text = { workspace = true }
