[package]
name = "rat-menu"
version = "1.0.3"
edition = "2021"
authors = ["thscharler <thscharler@gmail.com>"]
description = "menu widgets for ratatui"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "focus"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[features]
unstable-widget-ref = [
    #"ratatui/unstable-widget-ref",
]

[dependencies]
log = "0.4.25"
ratatui-core = { version = "0.1.0-alpha.2", path="../../ratatui/ratatui-core" }
ratatui-widgets = { version = "0.3.0-alpha.1", path="../../ratatui/ratatui-widgets" }
crossterm = "0.28"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"

rat-event = { version = "1.0", path = "../rat-event" }
rat-focus = { version = "1.0", path = "../rat-focus" }
rat-popup = { version = "1.0", path = "../rat-popup" }


[dev-dependencies]