[package]
name = "rat-menu"
version = "2.5.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "menu widgets for ratatui"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "focus"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
unstable-widget-ref = []

[dependencies]
ratatui = { version = "0.29" }
crossterm = "0.28"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
log = "0.4.25"

rat-event = { version = "1.4", path = "../rat-event" }
rat-focus = { version = "1.6", path = "../rat-focus" }
rat-popup = { version = "2.2", path = "../rat-popup" }
rat-reloc = { version = "1.4", path = "../rat-reloc" }
rat-cursor = { version = "1.2", path = "../rat-cursor" }

[dev-dependencies]