[package]
name = "rat-menu"
version = "3.0.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "menu widgets for ratatui"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "focus"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
unstable-widget-ref = []

[dependencies]
log = "0.4.25"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { version = "2.0" }
rat-focus = { version = "2.0" }
rat-popup = { version = "3.0" }
rat-reloc = { version = "2.0" }
rat-cursor = { version = "2.0" }

[dev-dependencies]