[package]
name = "rat-popup"
version = "2.2.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui popup semi-window widget"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "popup"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
unstable-widget-ref = []

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
log = "0.4"

rat-event = { version = "1.4", path = "../rat-event" }
rat-reloc = { version = "1.4", path = "../rat-reloc" }
rat-focus = { version = "1.6", path = "../rat-focus" }
rat-cursor = { version = "1.2", path = "../rat-cursor" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
unicode-segmentation = "1.11"
rat-theme4 = { version = "4.4", default-features = false, features = [], path = "../rat-theme4" }
rat-text = { version = "2.8", features = [], path = "../rat-text" }