[package]
name = "rat-popup"
version = "3.0.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui popup semi-window widget"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "popup"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
unstable-widget-ref = []

[dependencies]
log = "0.4"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-reloc = { workspace = true }
rat-focus = { workspace = true }
rat-cursor = { workspace = true }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
unicode-segmentation = "1.11"

rat-theme4 = { workspace = true, default-features = false }
rat-text = { workspace = true }
