[package]
name = "rat-reloc"
version = "1.2.1"
edition = "2024"
description = "relocate widgets after rendering"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "clip"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
ratatui = { version = "0.29" }