[package]
name = "rat-salsa"
version = "2.6.4"
authors = ["thscharler <thscharler@gmail.com>"]
edition = "2024"
description = "ratatui widgets and a crossterm event-loop"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "input", "event-loop"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "files.gif", "mdedit.gif"]

[lints]
workspace = true

[features]
default = ["dep:crossterm"]
# Include crossterm support. Default enabled.
crossterm = ["dep:crossterm"]
# Include tokio support.
async = ["dep:tokio"]
# Add scrolling-regions. See ratatui/scrolling-regions
scrolling-regions = ["ratatui/scrolling-regions"]
# Add support for dialog windows.
dialog = ["try_as_traits"]
# Add some support for rat-widget::FileDialog and rat-widget::MsgDialog
dialog_widgets = ["dialog", "rat-widget"]

[dependencies]
log = "0.4"
crossbeam = "0.8"
crossterm = { version = "0.28", optional = true }
try_as_traits = { version = "0.1", optional = true }
ratatui = { version = "0.29", features = [] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }

rat-event = { version = "1.4", path = "../rat-event" }
rat-focus = { version = "1.6", path = "../rat-focus" }
rat-widget = { version = "2.10", optional = true, path = "../rat-widget", features = ["user_directories"] }

[dev-dependencies]
anyhow = "1.0"
cli-clipboard = "0.4"
configparser = { version = "3.1", features = ["indexmap"] }
dirs = "6.0"
fern = "0.7"
indexmap = "2.12"
pure-rust-locales = "0.8"
rand = "0.9"
regex-cursor = "0.1.5"
ropey = "1.6.1"
sys-locale = "0.3"
sysinfo = "0.37"
unicode-segmentation = "1.11"

rat-widget = { version = "2.10", path = "../rat-widget", features = ["user_directories"] }
rat-theme4 = { version = "4.3", path = "../rat-theme4" }

[[example]]
name = "minimal"
path = "templates/minimal.rs"
required-features = ["crossterm"]

[[example]]
name = "nominal"
path = "templates/nominal.rs"
required-features = ["crossterm"]

[[example]]
name = "dialog"
path = "templates/dialog.rs"
required-features = ["dialog", "crossterm"]

[[example]]
name = "async1"
required-features = ["async", "crossterm", "scrolling-regions"]

[[example]]
name = "composite"
path = "examples/composite.rs"
required-features = ["crossterm"]

[[example]]
name = "files"
path = "examples/files.rs"
required-features = ["crossterm"]

[[example]]
name = "half_ui"
path = "examples/half_ui.rs"
required-features = ["crossterm"]

[[example]]
name = "inline"
path = "examples/inline.rs"
required-features = ["crossterm"]

[[example]]
name = "life"
path = "examples/life.rs"
required-features = ["crossterm"]

[[example]]
name = "links"
path = "examples/links.rs"
required-features = ["crossterm"]

[[example]]
name = "logscroll"
path = "examples/logscroll.rs"
required-features = ["crossterm"]

[[example]]
name = "textinput"
path = "examples/textinput.rs"
required-features = ["crossterm"]

[[example]]
name = "themes"
path = "examples/themes.rs"
required-features = ["crossterm"]

[[example]]
name = "todo"
path = "examples/todo.rs"
required-features = ["crossterm"]

[[example]]
name = "turbo"
path = "examples/turbo.rs"
required-features = ["crossterm"]

[[example]]
name = "ultra"
path = "examples/ultra.rs"
required-features = ["crossterm"]

