[package]
name = "rat-salsa"
version = "4.0.2"
authors = ["thscharler <thscharler@gmail.com>"]
edition = "2024"
description = "ratatui widgets and a crossterm event-loop"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "input", "event-loop"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "files.gif", "mdedit.gif"]

[lints]
workspace = true

[features]
default = []
# enable tokio support for async tasks.
async = ["dep:tokio"]
# enable support for dialog windows
dialog = ["try_as_traits"]
# add functions to use rat_widget::MsgDialog and rat_widget::FileDialog as dialog windows.
dialog_widgets = ["dialog", "rat-widget"]

[dependencies]
log = "0.4"
crossbeam = "0.8"
try_as_traits = { version = "0.1", optional = true }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { version = "2.0", path = "../rat-event" }
rat-focus = { version = "2.0", path = "../rat-focus" }
rat-widget = { version = "3.0", optional = true, path = "../rat-widget", features = ["user_directories"] }

[dev-dependencies]
anyhow = "1.0"
cli-clipboard = "0.4"
configparser = { version = "3.1", features = ["indexmap"] }
dirs = "6.0"
fern = "0.7"
rand = "0.9"
regex-cursor = "0.1.5"
ropey = "1.6.1"
sysinfo = "0.37"
unicode-segmentation = "1.11"

rat-widget = { version = "3.0", path = "../rat-widget", features = ["user_directories", "cli-clipboard"] }
rat-theme4 = { version = "4", path = "../rat-theme4" }

[[example]]
name = "async1"
required-features = ["async"]

[[example]]
name = "minimal"
path = "templates/minimal.rs"

[[example]]
name = "nominal"
path = "templates/nominal.rs"

[[example]]
name = "dialog"
path = "templates/dialog.rs"
required-features = ["dialog"]
