[package]
name = "rat-salsa2"
version = "2.0.0"
authors = ["thscharler <thscharler@gmail.com>"]
edition = "2021"
description = "ratatui widgets and a crossterm event-loop"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "input", "event-loop"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "files.gif", "mdedit.gif"]

[features]
default = []
async = ["dep:tokio"]

[dependencies]
crossbeam = "0.8"
crossterm = "0.28"
log = "0.4"
ratatui = { version = "0.29" }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }

rat-widget = { version = "1.0", path = "../rat-widget" }

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
fern = "0.7"
dirs = "6.0"
sysinfo = "0.33"
ropey = "1.6.1"
regex-cursor = "0.1.5"
rust-ini = "0.21"

rat-theme2 = { version = "1.0", path = "../rat-theme2" }

[[example]]
name = "async1"
required-features = ["async"]
