[package]
name = "rat-scrolled"
version = "1.5.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui scroll widget and traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "scroll"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
unstable-widget-ref = []

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
log = "0.4"

rat-event = { version = "1.4", path = "../rat-event" }
rat-reloc = { version = "1.4", path = "../rat-reloc" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
unicode-segmentation = "1.11"
rat-theme4 = { version = "4.3", default-features = false, features = [], path = "../rat-theme4" }

