[package]
name = "rat-scrolled"
version = "2.0.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui scroll widget and traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "scroll"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
unstable-widget-ref = []

[dependencies]
log = "0.4"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-reloc = { workspace = true }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
unicode-segmentation = "1.11"

rat-focus = { workspace = true }
rat-theme4 = { workspace = true, default-features = false }

